# compositionalanalyzer

./: .gitignore  .merlin  Makefile  README.md  abstract.mltop  analyzer.mltop  analyzer.odocl  compositional_analyzer.opam  dune-project  eq.form  parity.form  test.while
examples/: disj.form  division_by_3.while  eq1.form  eq2.form  eq3.form  eq_infl.form  ex1.while  if_ex1.while  loop1.while  loop2.while  loop2sol.while  loop3.while  loop4.while  loop_branch.while  max.while  parity1.form  parity2.form  parity3.form  parity4.form  parity_infl.form
lib/: abstract.ml  abstract.mli  affine.ml  affine.mli  cra.ml  dune  lex.mll  log.ml  par.mly  parity.ml  sigs.ml  sigs.mli  transition.ml  transition.mli
src/: abstract.ml  abstract.mli  affine.ml  affine.mli  analyzer.ml  cra.ml  formula.ml  formula.mli  lex.mll  log.ml  log.mli  matrix.ml  par.mly  parity.ml  pathExp.ml  sigs.ml  sigs.mli  transition.ml  transition.mli
